DevOCL/src/objects/OCLQS_Transaction_Monitor__c.object
<CustomObject>
    <description>Object to store transaction monitoring details
Build for Integration purpose</description>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <externalId>true</externalId>
        <label>Correlation Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Message__c</fullName>
        <label>Request Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Log__c</fullName>
        <label>Transaction Log</label>
        <referenceTo>OCLQS_Transaction_Log__c</referenceTo>
        <relationshipLabel>Transaction Monitor</relationshipLabel>
        <relationshipName>Transaction_Monitor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Transaction Monitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Reference Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Monitor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>